infra/k8s-dev/mongo-authentication-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-mongo-node
spec:
  type: NodePort
  selector:
    app: authentication-mongo
  ports:
    - name: authentication-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: tickets-mongo-node
#spec:
#  type: NodePort
#  selector:
#    app: tickets-mongo
#  ports:
#    - name: tickets-mongo
#      protocol: TCP
#      port: 27017
#      targetPort: 27017
