infra/k8s-dev/mongo-kms-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kms-mongo-node
spec:
  type: NodePort
  selector:
    app: kms-mongo
  ports:
    - name: kms-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
